--- a/.travis.yml
+++ b/.travis.yml
@@ -193,7 +193,8 @@ before_deploy:
   # create linux appimage
   - cd ${TRAVIS_BUILD_DIR}
   - if [[ "${SPEC}" = "linux-g++-64" && "${CONFIG}" = "installer" ]]; then
-        ./deploy/create_linux_appimage.sh ${TRAVIS_BUILD_DIR} ${SHADOW_BUILD_DIR}/release ${SHADOW_BUILD_DIR}/release/package;
+        ./deploy/create_linux_appimage_with_linuxdeployqt.sh ${SHADOW_BUILD_DIR};
+        curl --upload-file ./QGroundControl-x86_64.AppImage https://transfer.sh/QGroundControl-x86_64.AppImage;
     fi
 
 deploy:
