Jenkins linux create AppImage

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,22 +13,22 @@ env:
 matrix:
     fast_finish: true
     include:
-        - os: linux
-          dist: trusty
-          env: SPEC=linux-g++-64 CONFIG=installer
-          sudo: required
-        - os: linux
-          dist: trusty
-          env: SPEC=linux-g++-64 CONFIG=debug
-          sudo: required
+        #- os: linux
+        #  dist: trusty
+        #  env: SPEC=linux-g++-64 CONFIG=installer
+        #  sudo: required
+        #- os: linux
+        #  dist: trusty
+        #  env: SPEC=linux-g++-64 CONFIG=debug
+        #  sudo: required
         - os: android
           language: android
           env: SPEC=android-g++ CONFIG=installer
           sudo: false
-        - os: osx
-          osx_image: xcode9.2
-          env: SPEC=macx-clang CONFIG=installer
-          sudo: required
+        #- os: osx
+        #  osx_image: xcode9.2
+        #  env: SPEC=macx-clang CONFIG=installer
+        #  sudo: required
         - os: osx
           osx_image: xcode9.2
           env: SPEC=macx-ios-clang CONFIG=release
