Added option to enable/disable Airspaces on map Limit all queries to areas smaller than 500km^2. If an area of interest is greater, clip to 500km^2 centered on current ROI's center. Removed the identifier "Airmap" from error messages coming from Airmap. Added a clipping function to QGCGeoBoundingCube (clip polygon to given area)

--- a/src/Airmap/AirMap.SettingsGroup.json
+++ b/src/Airmap/AirMap.SettingsGroup.json
@@ -36,6 +36,12 @@
     "defaultValue":     false
 },
 {
+    "name":             "enableAirspace",
+    "shortDescription": "Show Airspace on Map (Experimental)",
+    "type":             "bool",
+    "defaultValue":     false
+},
+{
     "name":             "enableTelemetry",
     "shortDescription": "Enable AirMap Telemetry",
     "type":             "bool",
