--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -125,14 +125,15 @@
     "defaultValue":     false
 },
 {
-    "name":             "BaseDeviceFontPointSize",
-    "shortDescription": "Application font size",
-    "longDescription":  "The point size for the default font used.",
-    "type":             "uint32",
-    "units":            "pt",
-    "min":              6,
-    "max":              48,
-    "defaultValue":     0
+    "name":                 "BaseDeviceFontPointSize",
+    "shortDescription":     "Application font size",
+    "longDescription":      "The point size for the default font used.",
+    "type":                 "uint32",
+    "units":                "pt",
+    "min":                  6,
+    "max":                  48,
+    "defaultValue":         0,
+    "qgcRebootRequired":    true
 },
 {
     "name":             "StyleIsDark",
